EC-3067 fix the image height to prevent expansion shifting content to the right

--- a/source/sass/search/_channels-object.scss
+++ b/source/sass/search/_channels-object.scss
@@ -201,14 +201,10 @@ $max-page-width: 1400px;
       width:       100%;
 
       .img-remind{
-        padding:  0 $pad 0 0;
-      }
-
-      .img-remind{
         cursor:     pointer;
         display:    block;
-        height:     100%;
-        max-height: 100%;
+        height:     4em;
+        padding:    0 $pad 0 0;
       }
 
       .title-summary{
